src/objects/Credit__c.object
<CustomObject>
    <description>save credit data from the finance system temporarily.</description>
    <fields>
        <fullName>AdjustmentValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjustment Value</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to User object.</description>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Credit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>